--- a/_less/rtl.less
+++ b/_less/rtl.less
@@ -114,7 +114,7 @@ h2 .rssicon{
 .index a:visited{
 	line-height:2em;
 }
-.floatimg{
+.pleftfloat img{
 	float:right;
 	margin-right:auto;
 	margin-left:10px;
