--- a/_less/screen.less
+++ b/_less/screen.less
@@ -763,7 +763,10 @@ li p{
 	margin-top:5px;
 }
 
-.floatimg{
+.pleftfloat{
+	overflow:hidden;
+}
+.pleftfloat img{
 	float:left;
 	margin-right:10px;
 }
